add merged rating data to movie etl file

--- a/movies_etl.ipynb
+++ b/movies_etl.ipynb
@@ -5332,7 +5332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07996e22",
+   "id": "1eecf2ac",
    "metadata": {},
    "source": [
     "# 8.4.1  merge two sources (Kaggel & Wiki)"
@@ -5341,7 +5341,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "616c30b0",
+   "id": "56d96f37",
    "metadata": {},
    "outputs": [
     {
@@ -5601,7 +5601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dd3c3dd",
+   "id": "b5e98a4d",
    "metadata": {},
    "source": [
     "# Competing data:"
@@ -5610,7 +5610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3104947d",
+   "id": "fc11be86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5628,7 +5628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db429e76",
+   "id": "be2e6360",
    "metadata": {},
    "source": [
     "## check titles"
@@ -5637,7 +5637,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "166485ee",
+   "id": "9fc9bde4",
    "metadata": {},
    "outputs": [
     {
@@ -5755,7 +5755,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "2f28b059",
+   "id": "5b458ddc",
    "metadata": {},
    "outputs": [
     {
@@ -5887,7 +5887,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e6c7e091",
+   "id": "b52b113d",
    "metadata": {},
    "outputs": [
     {
@@ -5960,7 +5960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442c4054",
+   "id": "93f7bcec",
    "metadata": {},
    "source": [
     "## check runtime"
@@ -5969,7 +5969,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e8601b54",
+   "id": "fc5046a3",
    "metadata": {},
    "outputs": [
     {
@@ -6002,7 +6002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c6b745f",
+   "id": "4313af34",
    "metadata": {},
    "source": [
     "## check budget"
@@ -6011,7 +6011,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "e7ebb890",
+   "id": "d842b118",
    "metadata": {},
    "outputs": [
     {
@@ -6044,7 +6044,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50d1291",
+   "id": "0297e147",
    "metadata": {},
    "source": [
     "## check box office"
@@ -6053,7 +6053,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "63a8fe2b",
+   "id": "028418e2",
    "metadata": {},
    "outputs": [
     {
@@ -6087,7 +6087,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "eaa8bd3f",
+   "id": "c59fa19e",
    "metadata": {},
    "outputs": [
     {
@@ -6120,7 +6120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8bf522",
+   "id": "dd262e8e",
    "metadata": {},
    "source": [
     "# check release date"
@@ -6129,7 +6129,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "ac55f1b4",
+   "id": "bbd869e7",
    "metadata": {},
    "outputs": [
     {
@@ -6163,7 +6163,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "80a11d5b",
+   "id": "a5b70f33",
    "metadata": {},
    "outputs": [
     {
@@ -6281,7 +6281,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f60e6c03",
+   "id": "637b7755",
    "metadata": {},
    "outputs": [
     {
@@ -6304,7 +6304,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "6a2d498b",
+   "id": "874aa271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6315,7 +6315,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "ede11e1a",
+   "id": "99159f56",
    "metadata": {},
    "outputs": [
     {
@@ -6778,7 +6778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5dc5a1",
+   "id": "964fec6f",
    "metadata": {},
    "source": [
     "# check language"
@@ -6787,7 +6787,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a9b91109",
+   "id": "52505ca4",
    "metadata": {},
    "outputs": [
     {
@@ -6821,7 +6821,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d8aca0fc",
+   "id": "f24b5ec4",
    "metadata": {},
    "outputs": [
     {
@@ -6860,7 +6860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "262e72f8",
+   "id": "4565e7c4",
    "metadata": {},
    "source": [
     "# check production co"
@@ -6869,7 +6869,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "7efac814",
+   "id": "07e83226",
    "metadata": {},
    "outputs": [
     {
@@ -6999,7 +6999,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaeff0f1",
+   "id": "5963e59e",
    "metadata": {},
    "source": [
     "# execute the plan"
@@ -7008,7 +7008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170620e0",
+   "id": "1c67db79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7027,7 +7027,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "082fc93d",
+   "id": "79b58fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7038,7 +7038,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "25bd00c6",
+   "id": "d5d60700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7053,7 +7053,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "4b0f7559",
+   "id": "55f08f83",
    "metadata": {},
    "outputs": [
     {
@@ -7546,7 +7546,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "10b55080",
+   "id": "835edd41",
    "metadata": {},
    "outputs": [
     {
@@ -7570,7 +7570,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "58f5dc68",
+   "id": "2510d70d",
    "metadata": {},
    "outputs": [
     {
@@ -7592,7 +7592,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c9919dc2",
+   "id": "106ff5e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7608,7 +7608,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "7ae64a06",
+   "id": "d53a13b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7632,9 +7632,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20466864",
+   "metadata": {},
+   "source": [
+    "# 8.4.2 transform and merge rating data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "d771c957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inlcude a count of how many times a movie receied a given rating\n",
+    "# use groupby \n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "5f3da7b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename user count\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "77cfce1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pivot the tbl so movieid is the index\n",
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "5b3657d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename \n",
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "a421c986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge into movies_df w/ left merge to keep all movive-df data\n",
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "5ffaf2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill the missing ratings with zero (fillna())\n",
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57d502dd",
+   "id": "5b8cc14b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -7642,7 +7720,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd727fca",
+   "id": "e6a8c68d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f28e376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43f1d3df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "347b471f",
    "metadata": {},
    "outputs": [],
    "source": []
