adding updated files

--- a/movies_etl.ipynb
+++ b/movies_etl.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# import json file\n",
-    "## with the [file_dir] variable, it can now be referenced as opposed to writing the filepath\n",
+    "## with the [file_dir] variable, it can now be referenced with a variable\n",
     "file_dir = 'C:/Users/shannon/Desktop/Bootcamp/8-ETL/Movies-ETL'"
    ]
   },
