--- a/ETL_Function_test.ipynb
+++ b/ETL_Function_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
     "\n",
     "def extract_transform_load():\n",
     "    # 2. Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv('ratings.csv')\n",
+    "    kaggle_metadata = pd.read_csv('resources/movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv('resources/ratings.csv')\n",
     "\n",
     "    # 3. Open the read the Wikipedia data JSON file.\n",
-    "    with open('wikipedia-movies.json', mode='r') as file:\n",
+    "    with open('resources/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)\n",
     "\n",
     "    # 4. Read in the raw wiki movie data as a Pandas DataFrame.\n",
@@ -37,7 +37,7 @@
     "    return wiki_movies_df, kaggle_metadata, ratings\n",
     "\n",
     "# 6 Create the path to your file directory and variables for the three files. \n",
-    "file_dir = 'Users\\shannon\\Desktop\\Bootcamp\\8-ETL\\Movies-ETL'\n",
+    "file_dir = 'resources'\n",
     "# Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
     "# Kaggle metadata\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 193 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "4       1     1246     5.0  1425941556"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,13 +641,6 @@
     "# 11. Check the ratings DataFrame.\n",
     "ratings.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
