--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,11 +81,11 @@
     "\n",
     "def extract_transform_load():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
-    "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "    ratings = pd.read_csv('ratings.csv')\n",
+    "    kaggle_metadata = pd.read_csv('resources/movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv('resources/ratings.csv')\n",
     "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "    with open('wikipedia-movies.json', mode='r') as file:\n",
+    "    with open('resources/wikipedia-movies.json', mode='r') as file:\n",
     "        wiki_movies_raw = json.load(file)   \n",
     "    \n",
     "    # 3. Write a list comprehension to filter out TV shows.\n",
@@ -183,7 +183,11 @@
     "    budget = wiki_movies_df['Budget'].dropna()\n",
     "    budget = budget.map(lambda x: ' '.join(x) if type(x) == list else x)\n",
     "    budget = budget.str.replace(r'\\$.*[-—–](?![a-z])', '$', regex=True)\n",
-    "    budget = budget.str.replace(r'\\[\\d+\\]\\s*', '')\n",
+    "    matches_form_one = budget.str.contains(form_one, flags=re.IGNORECASE)\n",
+    "    matches_form_two = budget.str.contains(form_two, flags=re.IGNORECASE)\n",
+    "    budget[~matches_form_one & ~matches_form_two]\n",
+    "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', \n",
+    "                                                  flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
     "    \n",
     "    # recycling form_one and form_two from box_office work\n",
     "    wiki_movies_df['budget'] = budget.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
@@ -210,12 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = 'Users/shannon/Desktop/Bootcamp/8-ETL/Movies-ETL'\n",
+    "file_dir = 'resources'\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
     "# The Kaggle metadata\n",
@@ -226,17 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\shannon\\.conda\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:108: FutureWarning: The default value of regex will change from True to False in a future version.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 18. Set the three variables equal to the function created in D1.\n",
     "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
@@ -244,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +490,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +532,7 @@
        " 'running_time']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -573,13 +569,13 @@
        "Writer(s)                6834\n",
        "imdb_id                  7033\n",
        "box_office               5460\n",
-       "budget                   4706\n",
+       "budget                   4700\n",
        "release_date             7001\n",
        "running_time             6894\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
